<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.Activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/input">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/icon_for_design" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/welcome"
                app:fontFamily="@font/roboto_bold"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/sign_in"
                android:textStyle="normal"
                app:fontFamily="@font/roboto"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:layout_marginStart="25sp"
                android:layout_marginLeft="25sp"
                android:text="Username"
                app:fontFamily="@font/roboto_bold"
                android:textStyle="normal"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/email" />
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button_text"
                    android:textCursorDrawable="@drawable/my_custom_cursor_drawable"
                    android:inputType="textEmailAddress">
                </EditText>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:layout_marginStart="25sp"
                android:layout_marginLeft="25sp"
                android:text="@string/password"
                app:fontFamily="@font/roboto_bold"
                android:textStyle="normal"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/password_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/password" />
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/password_icon"
                    android:layout_toRightOf="@+id/password_icon"
                    android:backgroundTint="@color/button_text"
                    android:textCursorDrawable="@drawable/my_custom_cursor_drawable"
                    android:inputType="textPassword">
                </EditText>
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/input"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp">
        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btn_login"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:background="@drawable/buttonshape"
            android:text="@string/login"
            app:fontFamily="@font/roboto"
            android:textColor="@color/button_text"
            android:elevation="2dp"
            android:textSize="20sp" />
    </RelativeLayout>
</RelativeLayout>