<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:clickable="false"
    android:background="#fff"
    tools:context=".View.Fragment.SearchOrdersFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp">
        <LinearLayout
            android:id="@+id/lineone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/sent_orders"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:layout_marginStart="15dp"
                android:textSize="15sp" />
            <RelativeLayout
                android:id="@+id/searchview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp">

                <EditText
                    android:id="@+id/editsearchorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:maxLength="15"
                    android:textCursorDrawable="@drawable/my_custom_cursor_drawable"
                    android:hint="Search Order Reference Id"
                    android:imeOptions="actionDone"
                    android:backgroundTint="@color/white"/>

                <ImageView
                    android:id="@+id/searchorderfilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/search_1" />

            </RelativeLayout>

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:fontFamily="@font/roboto"-->
                <!--android:text="@string/result"-->
                <!--android:textColor="#000000"-->
                <!--android:layout_marginStart="15dp"-->
                <!--android:textSize="15sp" />-->
            <!--<ScrollView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:scrollbars="vertical">-->
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                >
                                <LinearLayout
                                    android:id="@+id/line1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:layout_width="100dp"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/btm_line_shape"
                                        android:fontFamily="@font/roboto_regular"
                                        android:text="@string/date"
                                        android:textColor="#000000" />
                                    <View
                                        android:layout_width="3dp"
                                        android:layout_height="0dp"
                                        android:background="@color/button_text"/>
                                    <TextView
                                        android:layout_width="100dp"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/btm_line_shape"
                                        android:fontFamily="@font/roboto_regular"
                                        android:text="@string/refe"
                                        android:textColor="#000000" />
                                    <View
                                        android:layout_width="3dp"
                                        android:layout_height="0dp"
                                        android:background="@color/button_text"/>
                                    <TextView
                                        android:layout_width="100dp"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/btm_line_shape"
                                        android:fontFamily="@font/roboto_regular"
                                        android:text="@string/orderno"
                                        android:textColor="#000000" />
                                    <!--<View-->
                                        <!--android:layout_width="3dp"-->
                                        <!--android:layout_height="0dp"-->
                                        <!--android:background="@color/button_text"/>-->
                                    <!--<TextView-->
                                        <!--android:layout_width="100dp"-->
                                        <!--android:layout_height="wrap_content"-->
                                        <!--android:background="@drawable/btm_line_shape"-->
                                        <!--android:fontFamily="@font/roboto_regular"-->
                                        <!--android:text="@string/emplotee"-->
                                        <!--android:textColor="#000000" />-->
                                    <View
                                        android:layout_width="3dp"
                                        android:layout_height="0dp"
                                        android:background="@color/button_text"/>
                                    <!--<TextView-->
                                        <!--android:layout_width="100dp"-->
                                        <!--android:layout_height="wrap_content"-->
                                        <!--android:background="@drawable/btm_line_shape"-->
                                        <!--android:fontFamily="@font/roboto_regular"-->
                                        <!--android:text="@string/lens_type"-->
                                        <!--android:textColor="#000000" />-->
                                    <!--<View-->
                                        <!--android:layout_width="3dp"-->
                                        <!--android:layout_height="0dp"-->
                                        <!--android:background="@color/button_text"/>-->
                                    <!--<TextView-->
                                        <!--android:layout_width="100dp"-->
                                        <!--android:layout_height="wrap_content"-->
                                        <!--android:background="@drawable/btm_line_shape"-->
                                        <!--android:fontFamily="@font/roboto_regular"-->
                                        <!--android:text="@string/treatment"-->
                                        <!--android:textColor="#000000" />-->
                                    <!--<View-->
                                        <!--android:layout_width="3dp"-->
                                        <!--android:layout_height="0dp"-->
                                        <!--android:background="@color/button_text"/>-->
                                    <!--<TextView-->
                                        <!--android:layout_width="100dp"-->
                                        <!--android:layout_height="wrap_content"-->
                                        <!--android:background="@drawable/btm_line_shape"-->
                                        <!--android:fontFamily="@font/roboto_regular"-->
                                        <!--android:text="@string/ort_type"-->
                                        <!--android:textColor="#000000" />-->
                                    <!--<View-->
                                        <!--android:layout_width="3dp"-->
                                        <!--android:layout_height="0dp"-->
                                        <!--android:background="@color/button_text"/>-->
                                    <!--<TextView-->
                                        <!--android:layout_width="100dp"-->
                                        <!--android:layout_height="wrap_content"-->
                                        <!--android:background="@drawable/btm_line_shape"-->
                                        <!--android:fontFamily="@font/roboto_regular"-->
                                        <!--android:text="@string/deliv_date"-->
                                        <!--android:textColor="#000000" />-->

                                    <View
                                        android:layout_width="3dp"
                                        android:layout_height="0dp"
                                        android:background="@color/button_text"/>
                                    <TextView
                                        android:layout_width="100dp"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/btm_line_shape"
                                        android:fontFamily="@font/roboto_regular"
                                        android:text="@string/status"
                                        android:textColor="#000000" />
                                </LinearLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="There is no content avaliable"
                                    android:visibility="gone"
                                    android:id="@+id/txt_content1"/>
                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="50dp">
                                    <ListView
                                        android:id="@+id/list"
                                        android:layout_width="match_parent"
                                        android:layout_height="600dp">
                                    </ListView>
                                </RelativeLayout>

                            </LinearLayout>
                        </RelativeLayout>
                    </RelativeLayout>
                </HorizontalScrollView>
          <!--//  </ScrollView>-->
        </LinearLayout>

        <!--<Button-->
            <!--android:id="@+id/new_order"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:text="@string/btn_name"-->
            <!--android:layout_below="@+id/lineone"-->
            <!--android:textColor="#626262"-->
            <!--android:textSize="20sp"-->
            <!--android:background="@drawable/buttonshape"-->
            <!--android:shadowColor="#A8A8A8"-->
            <!--android:shadowDx="0"-->
            <!--android:shadowDy="0"-->
            <!--android:shadowRadius="0"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:layout_marginRight="15dp"-->
             <!--/>-->
    </RelativeLayout>
</FrameLayout>